added registration update spring security authorities updated controllers
Closes #2